se agrego la direccion y un mapa

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,7 @@
 server {
-    listen 80;
-    
+    listen 81;
+    server_name vps-4920631-x.dattaweb.com 149.50.142.57 localhost;
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
