--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 81;
+    listen 80;  # Cambiado de 81 a 80 (puerto dentro del contenedor)
     server_name vps-4920631-x.dattaweb.com 149.50.142.57 localhost;
 
     location / {
@@ -10,7 +10,7 @@ server {
     
     # Redirigir las solicitudes a la API al servidor backend
     location /api {
-        proxy_pass http://backend:5000;
+        proxy_pass http://backend:5000;  # Asegúrate que 'backend' sea el nombre correcto del servicio
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
