--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,23 +27,22 @@ services:
       - MONGO_URI=mongodb://mongo:27017/pyme_contacts
       - JWT_SECRET=tu_clave_secreta_jwt_muy_segura
       - PORT=5000
-      # Añade aquí el resto de variables de entorno
     networks:
       - pyme-network
 
   # Servicio del frontend
-frontend:
-  build: ./frontend
-  container_name: pyme-frontend
-  restart: always
-  depends_on:
-    - backend
-  ports:
-    - "81:80"  # Esto es correcto: mapea puerto 81 del host al 80 del contenedor
-  environment:
-    - REACT_APP_API_URL=http://149.50.142.57:81/api  # Ajusta la URL para acceso externo
-  networks:
-    - pyme-network
+  frontend:
+    build: ./frontend
+    container_name: pyme-frontend
+    restart: always
+    depends_on:
+      - backend
+    ports:
+      - "81:80"
+    environment:
+      - REACT_APP_API_URL=http://149.50.142.57:81/api
+    networks:
+      - pyme-network
 
 networks:
   pyme-network:
